<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright The mod_cluster Project Authors
  ~ SPDX-License-Identifier: Apache-2.0
  -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <groupId>org.jboss</groupId>
        <artifactId>jboss-parent</artifactId>
        <version>47</version>
    </parent>

    <modelVersion>4.0.0</modelVersion>
    <groupId>org.jboss.mod_cluster</groupId>
    <artifactId>mod_cluster-examples-parent</artifactId>
    <name>mod_cluster Examples (parent)</name>
    <version>2.1.0.Final-SNAPSHOT</version>
    <packaging>pom</packaging>

    <licenses>
        <license>
            <name>Apache License 2.0</name>
            <url>https://repository.jboss.org/licenses/apache-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:git@github.com:modcluster/mod_cluster-examples.git</connection>
        <developerConnection>scm:git:git@github.com:modcluster/mod_cluster-examples.git</developerConnection>
        <url>https://github.com/modcluster/mod_cluster-examples</url>
        <tag>HEAD</tag>
    </scm>

    <properties>
        <!-- Require and build for JDK 17 -->
        <maven.compiler.target>17</maven.compiler.target>
        <maven.compiler.source>17</maven.compiler.source>

        <!-- Dependency versions -->
        <version.mod_cluster>2.0.4.Final</version.mod_cluster>

        <!-- Plugin versions -->
        <version.org.wildfly.checkstyle-config>1.0.8.Final</version.org.wildfly.checkstyle-config>
    </properties>

    <modules>
        <module>load-balancing-demo</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <!-- mod_cluster -->
            <!-- TODO replace with a BOM once available -->
            <dependency>
                <groupId>org.jboss.mod_cluster</groupId>
                <artifactId>mod_cluster-container-spi</artifactId>
                <version>${version.mod_cluster}</version>
            </dependency>
            <dependency>
                <groupId>org.jboss.mod_cluster</groupId>
                <artifactId>mod_cluster-container-tomcat-8.5</artifactId>
                <version>${version.mod_cluster}</version>
            </dependency>
            <dependency>
                <groupId>org.jboss.mod_cluster</groupId>
                <artifactId>mod_cluster-container-tomcat-9.0</artifactId>
                <version>${version.mod_cluster}</version>
            </dependency>
            <dependency>
                <groupId>org.jboss.mod_cluster</groupId>
                <artifactId>mod_cluster-core</artifactId>
                <version>${version.mod_cluster}</version>
            </dependency>
            <dependency>
                <groupId>org.jboss.mod_cluster</groupId>
                <artifactId>mod_cluster-load-spi</artifactId>
                <version>${version.mod_cluster}</version>
            </dependency>
            <dependency>
                <groupId>org.jboss.mod_cluster</groupId>
                <artifactId>mod_cluster-demo</artifactId>
                <version>${version.mod_cluster}</version>
            </dependency>
            <dependency>
                <groupId>org.jboss.mod_cluster</groupId>
                <artifactId>mod_cluster-demo-client</artifactId>
                <version>${version.mod_cluster}</version>
            </dependency>
            <dependency>
                <groupId>org.jboss.mod_cluster</groupId>
                <artifactId>mod_cluster-demo-server</artifactId>
                <version>${version.mod_cluster}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <configuration>
                    <autoVersionSubmodules>true</autoVersionSubmodules>
                    <tagNameFormat>@{project.version}</tagNameFormat>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-checkstyle-plugin</artifactId>
                    <executions>
                        <execution>
                            <id>check-style</id>
                            <phase>compile</phase>
                            <goals>
                                <goal>checkstyle</goal>
                            </goals>
                        </execution>
                    </executions>
                    <dependencies>
                        <dependency>
                            <groupId>org.wildfly.checkstyle</groupId>
                            <artifactId>wildfly-checkstyle-config</artifactId>
                            <version>${version.org.wildfly.checkstyle-config}</version>
                        </dependency>
                    </dependencies>
                    <configuration>
                        <linkXRef>false</linkXRef>
                        <configLocation>wildfly-checkstyle/checkstyle.xml</configLocation>
                        <consoleOutput>true</consoleOutput>
                        <failsOnError>true</failsOnError>
                        <includeTestSourceDirectory>true</includeTestSourceDirectory>
                        <excludes>**/*$logger.java,**/*$bundle.java</excludes>
                        <useFile/>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>
